# BDT_studies

./: .gitignore  .gitmodules  BDT_comparison.py  README.md  ROC_vs_PR.py  Wrapper  Wrapper_BDT_comparison  exec_BDT_comparison.sh  executable.sh  metrics_testing.py  pyproject.toml  requirements.txt
__exec__/: Wrapper  Wrapper_BDT_comparison  exec_BDT_comparison.sh  executable.sh
scripts/: BDT_comparison.py  ROC_vs_PR.py  metrics_testing.py
