[project]
name = "BDT"
version = "0.1.0"
description = "A project for bdt"
authors = [{name = "csantos", email = "csantos@example.com"}]

[tool.ruff]
exclude = ["FastBDT/*", "logs/*", "output/*"]
line-length = 79

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "E402", "F403", "F405"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
